[metadata]
name = vitrage_tempest_tests
summary = Tempest plugin for Vitrage project
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    vitrage_tempest_tests

[entry_points]
tempest.test_plugins =
    vitrage_tests = vitrage_tempest_tests.plugin:VitrageTempestPlugin

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = vitrage_tempest_tests/locale
domain = vitrage_tempest_tests

[update_catalog]
domain = vitrage_tempest_tests
output_dir = vitrage_tempest_tests/locale
input_file = vitrage_tempest_tests/locale/vitrage_tempest_tests.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = vitrage_tempest_tests/locale/vitrage_tempest_tests.pot
