[metadata]
name = vitrage-tempest-plugin
summary = Tempest plugin for Vitrage project
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/tempest/latest/plugin-registry.html 
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    vitrage_tempest_plugin

[entry_points]
tempest.test_plugins =
    vitrage_tests = vitrage_tempest_plugin.plugin:VitrageTempestPlugin
